博客系统总体功能的实现(包括写博客，上传博客等)

--- a/blog-system_front_rear_separation/pom.xml
+++ b/blog-system_front_rear_separation/pom.xml
@@ -43,5 +43,15 @@
 
     </dependencies>
 
+    <packaging>
+        war
+    </packaging>
+
+    <build>
+        <finalName>
+            blog-system
+        </finalName>
+    </build>
+
 
 </project>
